add RGB invoice HTLC
